test: Progress/Comment Keep-Alive + E2E Test (#70)
Updates keep-alive guidance for long-running tool calls, adds an example
tool handler and e2e coverage for SSE upgrade and heartbeat behavior,
and adjusts repository instructions and documentation around the same
flow.


Verifies the lazy SSE upgrade and keep-alive path exercised when a tool
emits `notifications/progress` or SSE comments: the first SSE message
causes the POST response to upgrade to `text/event-stream`, and periodic
reader-idle ticks emit `:\r\n` heartbeats rather than closing the
channel.


```mermaid
sequenceDiagram
  participant McpClient
  participant TachyonServer
  participant ProgressHandler

  McpClient->>TachyonServer: POST /mcp
  TachyonServer->>ProgressHandler: invoke slow-progress tool
  ProgressHandler->>TachyonServer: ctx.notifications().progress(...)
  TachyonServer-->>McpClient: text/event-stream response
  TachyonServer-->>McpClient: SSE heartbeat comments
  ProgressHandler->>TachyonServer: ToolResult.text("done")
  TachyonServer->>McpClient: tool-call result: "done"
```